--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,4 +8,4 @@ steps:
 - task: DotNetCoreCLI@2
   inputs:
     command: 'build'
-    projects: 'Api.Deployment.Sample/'
+    projects: 'Api.Deployment.Sample/Api.Deployment.Sample.csproj'
