--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ pool:
 
 steps:
 - script: |
-    dotnet restore Api.Deployment.Sample
+    dotnet restore Api.Deployment.Sample/Api.Deployment.Sample.csproj
     dotnet publish -c Release -o bin/Release/netcoreapp3.1
     mkdir artifact
     cp -r Api.Deployment.Sample/bin/Release/netcoreapp3.1 artifact/$(Build.SourceBranchName)
