--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,13 +6,16 @@ pool:
 
 steps:
 - task: DotNetCoreCLI@2
+  name: Build
   inputs:
     command: 'build'
     projects: 'Api.Deployment.Sample/Api.Deployment.Sample.csproj'
 - task: DotNetCoreCLI@2
+  name: Publish
   inputs:
     command: 'publish'
     publishWebProjects: true
+    projects: Api.Deployment.Sample/Api.Deployment.Sample.csproj
     arguments: '-c Release -o Api.Deployment.Sample/bin/Release/netcoreapp3.1'
 - script: |
     mkdir artifact
