--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,17 +6,17 @@ pool:
 
 steps:
 - task: DotNetCoreCLI@2
-  name: Build
+  displayName: Build
   inputs:
     command: 'build'
     projects: 'Api.Deployment.Sample/Api.Deployment.Sample.csproj'
 - task: DotNetCoreCLI@2
-  name: Publish
+  displayName: Publish
   inputs:
     command: 'publish'
     publishWebProjects: true
-    projects: Api.Deployment.Sample/Api.Deployment.Sample.csproj
     arguments: '-c Release -o Api.Deployment.Sample/bin/Release/netcoreapp3.1'
+    workingDirectory: 'Api.Deployment.Sample/Api.Deployment.Sample.csproj'
 - script: |
     mkdir artifact
     cp -r Api.Deployment.Sample/bin/Release/netcoreapp3.1 artifact/$(Build.SourceBranchName)
