--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,6 +16,7 @@ steps:
     command: 'publish'
     publishWebProjects: true
     arguments: '-c Release -o Api.Deployment.Sample/bin/Release/netcoreapp3.1'
+    projects: 'Api.Deployment.Sample/'
 - script: |
     mkdir artifact
     cp -r Api.Deployment.Sample/bin/Release/netcoreapp3.1 artifact/$(Build.SourceBranchName)
