Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,8 +15,7 @@ steps:
   inputs:
     command: 'publish'
     publishWebProjects: true
-    arguments: '-c Release -o Api.Deployment.Sample/bin/Release/netcoreapp3.1'
-    projects: 'Api.Deployment.Sample/'
+    arguments: '-v -c Release -o Api.Deployment.Sample/bin/Release/netcoreapp3.1'
 - script: |
     mkdir artifact
     cp -r Api.Deployment.Sample/bin/Release/netcoreapp3.1 artifact/$(Build.SourceBranchName)
