--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -23,7 +23,7 @@ steps:
     publishWebProjects: true
     arguments: '-c Release -o Api.Deployment.Sample/bin/Release/netcoreapp3.1'
     zipAfterPublish: True
-    projects: '**/*.csproj'
+    projects: '**/**/*.csproj'
 - script: |
     mkdir artifact
     cp -r Api.Deployment.Sample/bin/Release/netcoreapp3.1 artifact/$(Build.SourceBranchName)
