--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,15 +16,8 @@ steps:
     command: 'restore'
     projects: 'Api.Deployment.Sample/Api.Deployment.Sample.csproj'
     feedsToUse: 'select'
-- task: DotNetCoreCLI@2
-  displayName: Publish
-  inputs:
-    command: 'publish'
-    publishWebProjects: true
-    arguments: '-c Release -o Api.Deployment.Sample/bin/Release/netcoreapp3.1'
-    projects: 'Api.Deployment.Sample/Api.Deployment.Sample.csproj'
-    zipAfterPublish: True
 - script: |
+    dotnet publish Api.Deployment.Sample\Api.Deployment.Sample.csproj -c Release -o Api.Deployment.Sample/bin/Release/netcoreapp3.1
     mkdir artifact
     cp -r Api.Deployment.Sample/bin/Release/netcoreapp3.1 artifact/$(Build.SourceBranchName)
   displayName: Run Script
