--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,7 +20,8 @@ steps:
     dotnet publish -c Release -o Api.Deployment.Sample/bin/Release/netcoreapp$(netcore_version)
     mkdir artifact
     echo Novo
-    echo $(Build.SourceBranchName)
+    echo Api.Deployment.Sample/bin/Release/netcoreapp$(netcore_version)
+    ls Api.Deployment.Sample/bin/Release/netcoreapp$(netcore_version)
     cp -r Api.Deployment.Sample/bin/Release/netcoreapp$(netcore_version) artifact/$(Build.SourceBranchName)
   displayName: Run Script
 - task: PublishPipelineArtifact@1
