--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -17,7 +17,7 @@ steps:
 - script: |
     pwd && ls -la
     dotnet restore
-    dotnet publish -c Release -o Api.Deployment.Sample/bin/Release/netcoreapp$(netcore_version)
+    dotnet publish Api.Deployment.Sample/Api.Deployment.Sample.csproj -c Release -o Api.Deployment.Sample/bin/Release/netcoreapp$(netcore_version)
     mkdir artifact
     echo Novo
     echo Api.Deployment.Sample/bin/Release/netcoreapp$(netcore_version)
