Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,4 +28,4 @@ steps:
   displayName: Publish Artifact
   inputs:
     targetPath: '$(System.DefaultWorkingDirectory)/artifact'
-    artifact: 'ApiDeploymentSample'    
+    artifact: $(project_name)
