--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,5 +27,5 @@ steps:
 - task: PublishPipelineArtifact@1
   displayName: Publish Artifact
   inputs:
-    targetPath: '$(System.DefaultWorkingDirectory)/artifact'
+    targetPath: '$(System.DefaultWorkingDirectory)/artifact/publish.zip'
     artifact: $(project_name)
