--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,6 @@ steps:
   displayName: Run Script
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(System.DefaultWorkingDirectory)/artifact'
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)/artifact'
     ArtifactName: 'drop'
     publishLocation: 'Container'
