--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,14 +18,14 @@ steps:
     pwd && ls -la
     dotnet restore
     dotnet publish Api.Deployment.Sample/Api.Deployment.Sample.csproj -c Release -o Api.Deployment.Sample/bin/Release/netcoreapp$(netcore_version)
-    mkdir $(Build.ArtifactStagingDirectory)/artifact
+    mkdir $(System.DefaultWorkingDirectory)/artifact
     echo Novo
     echo Api.Deployment.Sample/bin/Release/netcoreapp$(netcore_version)
     ls Api.Deployment.Sample/bin/Release/netcoreapp$(netcore_version)
-    cp -r Api.Deployment.Sample/bin/Release/netcoreapp$(netcore_version) $(Build.ArtifactStagingDirectory)/artifact/$(Build.SourceBranchName)
+    cp -r Api.Deployment.Sample/bin/Release/netcoreapp$(netcore_version) $(System.DefaultWorkingDirectory)/artifact/$(Build.SourceBranchName)
   displayName: Run Script
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(Build.ArtifactStagingDirectory)/artifact'
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/artifact/publish.zip'
     ArtifactName: 'drop'
-    publishLocation: 'Container'
+    publishLocation: FilePath
