Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -26,6 +26,6 @@ steps:
   displayName: Run Script
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(System.DefaultWorkingDirectory)/artifact/publish.zip'
+    PathtoPublish: '$(System.DefaultWorkingDirectory)/artifact/'
     ArtifactName: 'drop'
     publishLocation: FilePath
