Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,4 +28,4 @@ steps:
   inputs:
     PathtoPublish: '$(System.DefaultWorkingDirectory)/artifact/'
     ArtifactName: 'drop'
-    publishLocation: FilePath
+    publishLocation: Container
