--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -8,10 +8,11 @@ trigger:
 
 pool:
   vmImage: 'ubuntu-latest'
+  projectName: 'Api.Deployment.Sample'
 
 variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+- script: dotnet build $(projectName)/$(projectName).csproj --configuration $(buildConfiguration)
+  displayName: 'dotnet build $(projectName)/$(projectName).csproj $(buildConfiguration)'
